JPackage Maven Plugin 0.0.1
* Initial support for OS X and Windows